tests/machine/x/cobol/string_compare.cob
       IDENTIFICATION DIVISION.
       PROGRAM-ID. STRING_COMPARE.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       PROCEDURE DIVISION.
       DISPLAY "a" < "b"
       DISPLAY "a" <= "a"
       DISPLAY "b" > "a"
       DISPLAY "b" >= "b"
       STOP RUN.
